# wavelet

./: .gitattributes  .gitignore  .gitmodules  .lot.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  design.md  notes.md  review.todo.typ  todo.md
.github/workflows/: deploy-docs.yml  release.yml
.lot-vault/: readme.md
.lot-vault/0._Decisions_and_clarifications_needed_from_Logan/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md
.lot-vault/1._Harnesses:_differential_and_conformance_gates/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md
.lot-vault/1._Harnesses:_differential_and_conformance_gates/1.1_F4:_permanent_differential_test_harness/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md
.lot-vault/1._Harnesses:_differential_and_conformance_gates/1.2_Round_trip_all_wit_types_(conformance_suite)/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md
.lot-vault/2._Shrink_and_settle_the_core_language/: 001.md
.lot-vault/2._Shrink_and_settle_the_core_language/2.1_Do_a_comprehensive_code_review/: 001.md  002.md  003.md
.lot-vault/2._Shrink_and_settle_the_core_language/2.2_Decide_the_drop_list_-_language_features_to_drop/: 001.md  002.md  003.md
.lot-vault/2._Shrink_and_settle_the_core_language/2.3_Decide_the_closure_story:_defunctionalize_or_fence_off/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md
.lot-vault/2._Shrink_and_settle_the_core_language/2.4_Decide_whether_to_trim_the_surface/: 001.md  002.md  003.md  004.md  005.md
.lot-vault/2._Shrink_and_settle_the_core_language/2.5_Align_the_naming_with_the_component_model/: 001.md  002.md  003.md
.lot-vault/3._Total_type_system:_close_the_gradual_holes/: 001.md
.lot-vault/4._Make_the_full_WIT_surface_expressible/: 001.md
.lot-vault/5._ABI_wavelet:_ABI-native_representation_in_the_backend/: 001.md  002.md
.lot-vault/6._Retire_the_interpreter_from_the_execution_surfaces/: 001.md  002.md
.lot-vault/7._Build,_CLI,_and_tooling_chores/: 001.md
.lot-vault/8._Unscheduled:_futures,_parked_questions,_and_docs/: 001.md
.lot-vault/Align_the_naming_with_the_component_model/: 001.md
.lot-vault/Do_a_comprehensive_code_review_focussing_on_quality,_inconsistencies,_and_compactness/: 001.md
.lot-vault/Higher_order_functions_as_libraries/: 001.md
.lot-vault/Plan_work/: 001.md  002.md  003.md  004.md  005.md  006.md
.lot-vault/Round_trip_all_wit_types/: 001.md
.lot-vault/Split_standard_library_from_core_language/: 001.md
.lot-vault/Start_implementing/: 001.md
.lot-vault/Switch_the_official_file_extension_from_.wvl_to_.wlt/: 001.md
.lot-vault/Work_to_get_to_ABI_wavelet/: 001.md
conformance/: .gitignore  Cargo.toml  README.md  test.sh
conformance/stub/: Cargo.toml
conformance/suite/: Cargo.toml
conformance/suite/src/: lib.rs  seeds.rs  transform.rs
conformance/wavelet/: README.md
conformance/wit/: world.wit
dev-notes/: blueberries.md  compiler-pipeline.typ  dd-type-system.typ  decouple-wasi-todo.md  decouple-wasi.md  design.md  docs-todo.md  drop-the-interpreter.md  feature-inventory.typ  gaps.typ  ideas.md  macro-components.md  notes.md  todo.md  tuple-calls.md  type-system-review.typ  type-system-todo.typ  type-system.typ  wavelet-as-markup.typ
dev-notes/functor/: index.typ
dev-notes/macro-components/: step-01-tree-wire-type.md  step-02-component-runtime.md  step-03-meta-macros-interface.md  step-04-import-macros-flag.md  step-05-resolve-macro-component.md  step-06-manifest-arity-registration.md  step-07-route-expansion.md  step-08-qualified-refs-and-collisions.md  step-09-produce-macro-component.md  step-10-e2e-and-docs.md  step-11-raise-pr.md
dev-notes/replace-interpreter/: index.typ  step-1-macro-components.typ  step-1-playground.typ  step-2-macro-components.typ  step-2-repl.typ  step-3-repl.typ
dev-notes/tuple-calls/: step-01-reader.md  step-02-interpreter.md  step-03-expander-and-runner.md  step-04-builtins.md  step-05-wit.md  step-06-emit-and-cleanup.md  step-07-scaffold-and-wvl.md  step-08-doc-examples.md  step-09-docs-prose.md  step-10-grammars.md  step-11-lsp.md  step-12-changelog-and-pr.md
docs/: README.md  docusaurus.config.js  examples.json  package-lock.json  package.json  sidebars.js
docs/docs/: cli.mdx  components.mdx  getting-started.mdx  intro.mdx  philosophy.mdx  roadmap.mdx  stdlib.mdx  supply-chain.mdx
docs/scripts/: gen-examples.mjs
examples/: main.wvl  shout.wvl
scripts/: README.md  build-cli.sh  build-docs.sh  build-lsp.sh  build.sh  changelog-section.sh  coverage.sh  init-submodules.sh  install.sh  package-tooling.sh  regen-examples.sh
scripts/ci/: build-cli.sh  build-docs.sh  build-lsp.sh  changelog-section.sh  package-tooling.sh
src/: build.rs  builtins.rs  check.rs  emit.rs  expand.rs  form.rs  host.rs  interp.rs  lexer.rs  lib.rs  macrobuild.rs  macrodep.rs  macrolib.rs  macros.rs  main.rs  meta.rs  printer.rs  reader.rs  repl.rs  runner.rs  scaffold.rs  tools.rs  value.rs  wasi-http.wit  wasm.rs  wit.rs  witdep.rs
tests/: backend_byte_width.rs  backend_char.rs  backend_functor.rs  backend_numeric.rs  checker_all_paths.rs  compose.rs  differential.rs  examples.rs  functor_abi_spike.rs  functor_runtime.rs  generic_bridge.rs  http.rs  macro_component.rs  macro_differential.rs  produced_macros.rs  type_system.rs  wit_deps.rs  wit_expand.rs  wkg_populate.rs
tests/fixtures/: add.wasm  add.wat  macros.wasm  produced-macros.README.md  produced-macros.wasm  produced-macros.wvl
tests/fixtures/macros/: Cargo.toml  README.md
tests/fixtures/macros/src/: lib.rs  macro_lib.rs
tests/fixtures/macros/wit/: world.wit
tooling/: README.md
tooling/vim/: .gitignore  README.md
tooling/vscode/: README.md  extension.js  language-configuration.json  package.json
tooling/wavelet-lsp/: Cargo.toml  README.md
tooling/wavelet-lsp/src/: analysis.rs  line_index.rs  main.rs
tools/macro-guest/: Cargo.toml  README.md  build.rs
tools/macro-guest/src/: lib.rs  macro_lib.rs
tools/macro-guest/wit/: world.wit
wit/meta/: code.wit
(+321 files in other folders)
