[package]
name = "wavelet"
version = "0.3.0"
edition = "2024"
license = "MIT"

[lib]
# `cdylib` so the interpreter can be compiled to wasm (the docs playground);
# `rlib` so the native `wavelet` binary can still link against it.
crate-type = ["cdylib", "rlib"]

[dependencies]
wac-graph = "0.10.0"
wasm-encoder = "0.251.0"
wit-component = "0.251.0"
wit-parser = "0.251.0"

# wasm-only: the browser playground bindings (see `src/wasm.rs`).
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[dev-dependencies]
# parses docs/examples.json for the documentation-example test suite
serde_json = "1"
