[package]
name = "roundtrip-suite"
version = "0.1.0"
edition = "2024"

[features]
# Selects the second hard-coded seed table. Two builds are shipped so a
# callee cannot hard-code responses.
seed-b = []

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component.target]
path = "../wit"
world = "roundtrip"

[package.metadata.component.bindings]
derives = ["PartialEq"]
