# Standalone crate: an empty [workspace] table severs it from the parent
# `wavelet` package so building the LSP never perturbs the docs/examples
# pipeline (which builds the root crate to wasm). It path-depends on the
# compiler crate to reuse its reader as the single source of syntax truth.
[workspace]

[package]
name = "wavelet-lsp"
version = "0.10.0"
edition = "2024"
description = "A basic Language Server for the Wavelet language"

[[bin]]
name = "wavelet-lsp"
path = "src/main.rs"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.94"
serde = "1"
serde_json = "1"
wavelet = { path = "../.." }
