# The guest crate behind a *produced* `wavelet:meta/macros` component (Step 9,
# strategy A: interpreter-in-a-component).
#
# `wavelet build` of a Wavelet macro-library file points this crate at the
# file's source (via the `WAVELET_MACRO_SRC` env var that `build.rs` reads),
# builds it for `wasm32-unknown-unknown` (NO WASI — it must instantiate under
# the consumer's empty, capability-free linker), and componentizes the result.
# It depends on the `wavelet` crate as a library so the bundled interpreter IS
# the semantics oracle (`crate::macrolib`); the macro source is embedded as data.
#
# Standalone, like the hand fixture: NOT part of the `wavelet` workspace and
# never built by `cargo test`. See `README.md` for the build invocation.
[package]
name = "wavelet-macro-guest"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# The guest runtime the wit-bindgen-generated `src/macro_lib.rs` links against.
wit-bindgen = "0.43.0"
# The Wavelet crate itself: the bundled interpreter + `macrolib` guest helpers.
# A path dependency relative to this crate (../../ is the repo root). The
# `wavelet` lib already compiles to `wasm32-unknown-unknown` (it is what the
# docs playground cdylib uses), and `macrolib` is deliberately not native-gated.
# `default-features = false` drops the `playground` feature (wasm-bindgen), so
# this guest links the interpreter for `wasm32` with no ambient imports.
wavelet = { path = "../..", default-features = false }

[profile.release]
strip = true
opt-level = "s"

[workspace]
